--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-plugin-module-resolver": "^4.1.0",
     "hamburger-react": "^2.4.1",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-responsive-masonry": "^2.1.3",
     "styled-components": "^5.3.0",
     "unsplash-js": "^7.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
